<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.family.heropedia.ui.fragments.HomeFragment"
        android:label="@string/navgraph_label_homeFragment">
        <action
            android:id="@+id/action_homeFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.family.heropedia.ui.fragments.DetailsFragment"
        android:label="@string/navgraph_label_detailsFragment">
        <action
            android:id="@+id/action_detailsFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="heroArgs"
            app:argType="com.family.heropedia.models.Hero" />
    </fragment>
    <fragment
        android:id="@+id/favoriteHeroes"
        android:name="com.family.heropedia.ui.fragments.FavoriteHeroes"
        android:label="@string/navgraph_label_favFragment">
        <action
            android:id="@+id/action_favoriteHeroes_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>